# ia_nest_core

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  IA_NEST_CORE_CONTEXT.md  README.md  install.sh  pyproject.toml
config/: core.example.yaml  core.lab.example.yaml
deploy/: ollama.compose.yaml  setup.sh
docs/: ALCANCE_CORE.md  ARCHITECTURE.md  CAPAS_FUTURAS.md  CONVENCIONES.md  CORE_CONTRACT.md  DESPLIEGUE.md  FRONTERAS.md  LINEA_DE_ACTUACION.md  PLAN.md  VERSIONADO.md  VISION_FUNCIONAL.md
docs/decision_records/: 0001-repo-core.md  0002-riesgos-diseno-revision-cruzada.md  0003-protocolo-cable-runtime-openai-compatible.md  0004-streaming-como-primitiva.md  0005-politica-fallo-modelo-no-disponible.md  0006-version-protocolo-mcp-fijada.md  0007-modelo-confianza-tool-contracts.md  0008-presupuesto-contexto-estabilidad-entidad.md  0009-adoptar-antes-que-construir.md  0010-formato-telemetria-csv-jsonl.md  0011-frontera-memoria-costura.md  0012-stack-y-tooling.md  0013-backend-inferencia-desarrollo.md  0014-esquema-configuracion-declarativa.md  0015-esquema-traza-telemetria.md  0016-idioma-identificadores-claves.md  0017-formato-resultados-eval.md  0018-interfaz-model-adapter.md  0019-resolucion-modelo-dominio-prompt-run.md  (+20 more)
eval/: README.md
tests/: test_cli_help.py  test_config_load_errors.py  test_deploy_interfaces.py  test_init.py  test_minor_fixes.py  test_phase_6b.py  test_phase_7.py  test_phase_8.py  test_prompt_runtime.py  test_provisioning.py  test_task_config.py  test_task_coverage.py  test_task_interfaces.py  test_task_runtime.py
(+59 files in other folders)
