[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ianest-core"
version = "0.2.0"
description = "IA_NEST Core"
requires-python = ">=3.13"
dependencies = [
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]
interfaces = [
  "mcp>=1.28.1",
  "starlette>=0.27",
  "uvicorn>=0.31.1",
]

[project.scripts]
ianest = "ianest_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
